--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/CorpsFavicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/CorpsIcon32.jpg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/CorpsIcon16.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/SHCFavicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/SHCLogo32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/SHCLogo16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ball State Student Honors Council</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
